---
source: basiliq/src/serve/tests/requests/update/obj/include.rs
expression: res

---
{
  "jsonapi": {
    "version": "1.0"
  },
  "data": {
    "type": "public__peoples",
    "id": "[uuid]",
    "attributes": {
      "age": 100,
      "first-name": "Francis",
      "gender": "M",
      "last-name": "Le Roy",
      "twitter": null
    },
    "relationships": {
      "public__people-article": {
        "data": [
          {
            "type": "public__people-article",
            "id": "[uuid]"
          },
          {
            "type": "public__people-article",
            "id": "[uuid]"
          }
        ]
      }
    }
  },
  "included": [
    {
      "type": "public__people-article",
      "id": "[uuid]"
    },
    {
      "type": "public__people-article",
      "id": "[uuid]"
    }
  ]
}
